styling got mixed up somewhere, page not responsive still and some styles are clashing - best temp fix given now

--- a/react-portfolio/src/components/sidebar/index.scss
+++ b/react-portfolio/src/components/sidebar/index.scss
@@ -64,7 +64,7 @@ nav {
         }
             &:after {
              content: '';
-            font-size: 14px;
+            font-size: 17px;
             letter-spacing: 2px;
             position: absolute;
             top: 0;
@@ -102,7 +102,7 @@ nav {
 }
 
 ul {
-    position: absolute;
+    display: block;
     bottom: 20px;
     width: 100%;
     display: block;
@@ -110,13 +110,14 @@ ul {
     list-style: none;
     text-align: center;
     margin: 0;
+    position: absolute;
     
     li {
         a{
-            padding: 7px 0;
+            padding: 7px 59px 0 0;
             display: block;
-            font-size: 24px;
-            line-height: 16px;
+            font-size: 32px;
+            line-height: 12px;
 
             &:hover svg {
                 color: #3d4dfc;
